new maven/gradle compatible tree forced swing look and feel minor changes